Updated latex writeup

--- a/writeup/latex/dissertation.tex
+++ b/writeup/latex/dissertation.tex
@@ -8,6 +8,7 @@
 \usepackage{notoccite}
 \usepackage{longtable}
 \usepackage{booktabs}
+\usepackage{enumitem}
 \usepackage[justification=centering]{caption}
 
 
@@ -56,10 +57,11 @@
 	\include{chapters/8_conclusion}
 	
 	% back matter
-	\bibliography{references}
 
 	\appendix
 	\addcontentsline{toc}{chapter}{Appendices}
 	\input{backmatter/appenda}
+	
+	\bibliography{references}
 
 \end{document}
