Latex writeup continue

--- a/writeup/latex/dissertation.tex
+++ b/writeup/latex/dissertation.tex
@@ -9,6 +9,7 @@
 \usepackage{longtable}
 \usepackage{booktabs}
 \usepackage{enumitem}
+\usepackage{tabularx}
 \usepackage[justification=centering]{caption}
 
 
@@ -53,8 +54,8 @@
 	\include{chapters/4_design}
 	\include{chapters/5_implementation}
 	\include{chapters/6_testing}
-	\include{chapters/7_evaluation}
-	\include{chapters/8_conclusion}
+	\include{chapters/7_conclusion}
+	\include{chapters/8_ethics}
 	
 	% back matter
 
