--- a/writeup/latex/references.bib
+++ b/writeup/latex/references.bib
@@ -194,7 +194,7 @@
 	title = {List of Wikipedias},
 	year = "2019",
 	url = "https://meta.wikimedia.org/wiki/List_of_Wikipedias",
-	note = "[Online; accessed 6 Mar 2020]"
+	note = "[Accessed 6 Mar 2020]"
 }
 
 @misc{dbpedia2019about,
@@ -202,7 +202,7 @@
 	title = {{About | DBpedia}},
 	year = "2019",
 	url = "https://wiki.dbpedia.org/about",
-	note = "[Online; accessed 6 Mar 2020]"
+	note = "[Accessed 6 Mar 2020]"
 }
 
 @article{lehmann2015dbpedia,
@@ -248,4 +248,175 @@
 	year={2011},
 	author={Koepke, Hoyt},
 	publisher={University of Washington}
+}
+
+@misc{cass2019,
+	title={The Top Programming Languages 2019},
+	url={https://spectrum.ieee.org/computing/software/the-top-programming-languages-2019},
+	journal={IEEE Spectrum: Technology, Engineering, and Science News}, publisher={IEEE},
+	author={Cass, Stephen},
+	year={2019}, month={Sep}
+}
+
+@misc{nltk2019,
+	title={Natural Language Toolkit},
+	url={https://www.nltk.org/},
+	journal={Natural Language Toolkit - NLTK 3.4.5 documentation},
+	publisher={ NLTK Project},
+	author={NLTK Project},
+	year={2019}, month={Aug}
+}
+
+@article{pedregosa2011scikit,
+	title={Scikit-learn: Machine learning in Python},
+	author={Pedregosa, Fabian and Varoquaux, Ga{\"e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and others},
+	journal={Journal of machine learning research},
+	volume={12},
+	number={Oct},
+	pages={2825--2830},
+	year={2011}
+}
+
+@inproceedings{abadi2016tensorflow,
+	title={Tensorflow: A system for large-scale machine learning},
+	author={Abadi, Mart{\'\i}n and Barham, Paul and Chen, Jianmin and Chen, Zhifeng and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Irving, Geoffrey and Isard, Michael and others},
+	booktitle={12th $\{$USENIX$\}$ Symposium on Operating Systems Design and Implementation ($\{$OSDI$\}$ 16)},
+	pages={265--283},
+	year={2016}
+}
+
+@misc{polzin2019,
+	title={Intelligent Scanning Using Deep Learning for MRI},
+	url={https://blog.tensorflow.org/2019/03/intelligent-scanning-using-deep-learning.html},
+	journal={The TensorFlow Blog},
+	publisher={Tensorflow},
+	author={Polzin, Jason A},
+	year={2019}, month={Mar}
+}
+
+@misc{pichai2015,
+	title={TensorFlow: smarter machine learning, for everyone},
+	url={https://googleblog.blogspot.com/2015/11/tensorflow-smarter-machine-learning-for.html},
+	journal={Official Google Blog},
+	publisher={Google},
+	author={Pichai, Sundar},
+	year={2015}, month={Nov}
+}
+@misc{villegas2019,
+	author = {Villegas, Paulo},
+	title = {python-aiml},
+	year = {2019},
+	publisher = {GitHub},
+	journal = {GitHub repository},
+	url = {https://github.com/paulovn/python-aiml}
+}
+
+@misc{cox2019,
+	title={About ChatterBot},
+	url={https://chatterbot.readthedocs.io/en/stable},
+	journal={About ChatterBot},
+	author={Cox, Gunther},
+	year={2019}, month={Jan}
+}
+@book{vermuelen2019,
+	place={Berkeley, CA},
+	title={Industrial machine learning: using artificial intelligence as a transformational disruptor},
+	publisher={Apress},
+	author={{Vermeulen, Andreas Fran\c{c}ois}},
+	year={2019}
+}
+
+@misc{python2017db,
+	author = {Lemburg, Marc-André},
+	title = {PEP 249 -- Python Database API Specification v2.0},
+	year = {2017},
+	month = {Nov},
+	url = {https://www.python.org/dev/peps/pep-0249/},
+}
+
+@misc{rdf2019,
+	author={{RDFLib Team}},
+	title={rdflib 4.2.2},
+	url={https://rdflib.readthedocs.io/en/stable},
+	year {2019},
+	month = {May},
+}
+
+
+@misc{python2020web,
+	author={{Python Wiki}},
+	title={Web Frameworks for Python},
+	url={https://wiki.python.org/moin/WebFrameworks},
+	year {2020},
+	month = {Jan},
+}
+
+@misc{microsoft2019azure,
+	author={{Microsoft Azure}},
+	title={How Azure Machine Learning works: Architecture and concepts},
+	url={https://docs.microsoft.com/en-gb/azure/machine-learning/concept-azure-machine-learning-architecture},
+	year {2019},
+	month = {Dec},
+}
+
+@article{witten2005practical,
+	title={Practical machine learning tools and techniques},
+	author={Witten, Ian H and Frank, Eibe and Hall, Mark A},
+	journal={Morgan Kaufmann},
+	pages={578},
+	year={2005}
+}
+
+@article{abeel2009java,
+	title={Java-ml: A machine learning library},
+	author={Abeel, Thomas and Peer, Yves Van de and Saeys, Yvan},
+	journal={Journal of Machine Learning Research},
+	volume={10},
+	number={Apr},
+	pages={931--934},
+	year={2009}
+}
+
+@article{kovalev2016deep,
+	title={Deep learning with theano, torch, caffe, tensorflow, and deeplearning4j: Which one is the best in speed and accuracy?},
+	author={Kovalev, Vassili and Kalinovsky, Alexander and Kovalev, Sergey},
+	year={2016},
+	publisher={Minsk: Publishing Center of BSU}
+}
+
+@misc{alice2013,
+	author={{ALICE A.I. Foundation}},
+	title={Google Code Archive - program-ab},
+	url={https://code.google.com/archive/p/program-ab/},
+	year {2013},
+	month = {Jan},
+}
+
+@misc{google2018dominos,
+	author={{Google}},
+	title={Domino’s simplifies ordering pizza using Dialogflow's conversational technology},
+	url={https://dialogflow.com/case-studies/dominos/Domino's-case-study.pdf},
+	year {2018},
+	month = {Mar},
+}
+
+@misc{yourmd2017,
+	author={{Your.MD}},
+	title={About Us - Your.MD},
+	url={https://www.your.md/about},
+	year {2017},
+	month = {Jan},
+}
+
+@inproceedings{ramngongausbeck2018,
+	address = {Republic and Canton of Geneva, Switzerland},
+	author = {Athreya, Ram G and Ngonga, Axel and Usbeck, Ricardo},
+	booktitle = {WWW '18 Companion: The 2018 Web Conference Companion, April 23--27, 2018, Lyon, France},
+	doi = {10.1145/3184558.3186964},
+	location = {Lyon, France},
+	numpages = {4},
+	publisher = {International World Wide Web Conferences Steering Committee},
+	title = {{Enhancing Community Interactions with Data-Driven Chatbots - The DBpedia Chatbot}},
+	url = {https://svn.aksw.org/papers/2018/WWW_dbpedia_chatbot/public.pdf},
+	year = 2018
 }
