--- a/writeup/latex/references.bib
+++ b/writeup/latex/references.bib
@@ -1,3 +1,5 @@
+%TODO: Manage online resources with accessed date
+%TODO: Deal with errors thrown by Bibtex, missing tags
 @misc{chandra2018,
 	author = {Chandra, Rishi},
 	title = {How Google Home and the Google Assistant helped you get more done in 2017},
@@ -21,7 +23,7 @@
 	year={1950}
 }
 
-@article{weizenbaum1976computer,
+@book{weizenbaum1976computer,
 	title={Computer power and human reason: From judgment to calculation.},
 	author={Weizenbaum, Joseph},
 	year={1976},
@@ -338,7 +340,7 @@
 	author={{RDFLib Team}},
 	title={rdflib 4.2.2},
 	url={https://rdflib.readthedocs.io/en/stable},
-	year {2019},
+	year = {2019},
 	month = {May},
 }
 
@@ -347,16 +349,16 @@
 	author={{Python Wiki}},
 	title={Web Frameworks for Python},
 	url={https://wiki.python.org/moin/WebFrameworks},
-	year {2020},
+	year = {2020},
 	month = {Jan},
 }
 
-@misc{microsoft2019azure,
+@misc{microsoft2019architecture,
 	author={{Microsoft Azure}},
 	title={How Azure Machine Learning works: Architecture and concepts},
 	url={https://docs.microsoft.com/en-gb/azure/machine-learning/concept-azure-machine-learning-architecture},
-	year {2019},
-	month = {Dec},
+	year = {2019},
+	month = {Dec}
 }
 
 @article{witten2005practical,
@@ -377,7 +379,7 @@
 	year={2009}
 }
 
-@article{kovalev2016deep,
+@book{kovalev2016deep,
 	title={Deep learning with theano, torch, caffe, tensorflow, and deeplearning4j: Which one is the best in speed and accuracy?},
 	author={Kovalev, Vassili and Kalinovsky, Alexander and Kovalev, Sergey},
 	year={2016},
@@ -388,7 +390,7 @@
 	author={{ALICE A.I. Foundation}},
 	title={Google Code Archive - program-ab},
 	url={https://code.google.com/archive/p/program-ab/},
-	year {2013},
+	year = {2013},
 	month = {Jan},
 }
 
@@ -396,7 +398,7 @@
 	author={{Google}},
 	title={Domino’s simplifies ordering pizza using Dialogflow's conversational technology},
 	url={https://dialogflow.com/case-studies/dominos/Domino's-case-study.pdf},
-	year {2018},
+	year = {2018},
 	month = {Mar},
 }
 
@@ -404,7 +406,7 @@
 	author={{Your.MD}},
 	title={About Us - Your.MD},
 	url={https://www.your.md/about},
-	year {2017},
+	year = {2017},
 	month = {Jan},
 }
 
@@ -419,4 +421,346 @@
 	title = {{Enhancing Community Interactions with Data-Driven Chatbots - The DBpedia Chatbot}},
 	url = {https://svn.aksw.org/papers/2018/WWW_dbpedia_chatbot/public.pdf},
 	year = 2018
+}
+
+@inproceedings{mikolov2010recurrent,
+	title={Recurrent neural network based language model},
+	author={Mikolov, Tom{\'a}{\v{s}} and Karafi{\'a}t, Martin and Burget, Luk{\'a}{\v{s}} and {\v{C}}ernock{\`y}, Jan and Khudanpur, Sanjeev},
+	booktitle={Eleventh annual conference of the international speech communication association},
+	year={2010}
+}
+
+@inproceedings{pascanu2013difficulty,
+	title={On the difficulty of training recurrent neural networks},
+	author={Pascanu, Razvan and Mikolov, Tomas and Bengio, Yoshua},
+	booktitle={International conference on machine learning},
+	pages={1310--1318},
+	year={2013}
+}
+
+@article{wu2016google,
+	title={Google's neural machine translation system: Bridging the gap between human and machine translation},
+	author={Wu, Yonghui and Schuster, Mike and Chen, Zhifeng and Le, Quoc V and Norouzi, Mohammad and Macherey, Wolfgang and Krikun, Maxim and Cao, Yuan and Gao, Qin and Macherey, Klaus and others},
+	journal={arXiv preprint arXiv:1609.08144},
+	year={2016}
+}
+
+@online{kaggle,
+	author = "Kaggle",
+	title = "Kaggle: Your Home for Data Science",
+	url = "https://www.kaggle.com/",
+	addendum = "[Accessed 10 March 2020]"
+}
+
+@article{kuan2017deep,
+	title={Deep learning for lung cancer detection: tackling the kaggle data science bowl 2017 challenge},
+	author={Kuan, Kingsley and Ravaut, Mathieu and Manek, Gaurav and Chen, Huiling and Lin, Jie and Nazir, Babar and Chen, Cen and Howe, Tse Chiang and Zeng, Zeng and Chandrasekhar, Vijay},
+	journal={arXiv preprint arXiv:1705.09435},
+	year={2017}
+}
+
+@inproceedings{uchendu2019characterizing,
+	title="Characterizing Man-made vs. Machine-made Chatbot Dialogs",
+	author= {Adaku {Uchendu} and Jeffrey {Cao} and Qiaozhi {Wang} and Bo {Luo} and Dongwon {Lee}},
+	booktitle="Proceedings of the  Conference for Truth and Trust Online 2019",
+	year="2019"
+}
+
+@online{rdany,
+	author = "Gabriel Carabello",
+	title = "rDany Chat",
+	year = {2016},
+	url = "https://www.kaggle.com/eibriel/rdany-conversations",
+	addendum = "[Accessed 10 March 2020]"
+}
+
+@online{sparql,
+	author = "The W3C SPARQL Working Group",
+	title = "SPARQL 1.1 Overview",
+	year = {2013},
+	url = "https://www.w3.org/TR/sparql11-query/",
+	addendum = "[Accessed 10 March 2020]"
+}
+
+@article{decker2000semantic,
+	title={The semantic web: The roles of XML and RDF},
+	author={Decker, Stefan and Melnik, Sergey and Van Harmelen, Frank and Fensel, Dieter and Klein, Michel and Broekstra, Jeen and Erdmann, Michael and Horrocks, Ian},
+	journal={IEEE Internet computing},
+	volume={4},
+	number={5},
+	pages={63--73},
+	year={2000},
+	publisher={IEEE}
+}
+
+@article{berners2001semantic,
+	title={The semantic web},
+	author={Berners-Lee, Tim and Hendler, James and Lassila, Ora},
+	journal={Scientific american},
+	volume={284},
+	number={5},
+	pages={34--43},
+	year={2001},
+	publisher={JSTOR}
+}
+
+@online{mediawiki,
+	author = "Wikimedia Foundation",
+	title = "API:Main page",
+	year = {2020},
+	url = "https://www.mediawiki.org/wiki/API:Main_page",
+	addendum = "[Accessed 10 March 2020]"
+}
+
+@online{apachejena,
+	author = "The Apache Software Foundation",
+	title = "Apache Jena",
+	year = {2020},
+	url = "https://jena.apache.org/",
+	addendum = "[Accessed 10 March 2020]"
+}
+
+@online{apachemaven,
+	author = "The Apache Software Foundation",
+	title = "Apache Maven",
+	year = {2020},
+	url = "https://maven.apache.org/",
+	addendum = "[Accessed 10 March 2020]"
+}
+
+@online{gradle,
+	author = "Gradle Inc.",
+	title = "Gradle Build Tool",
+	year = {2020},
+	url = "https://gradle.org/",
+	addendum = "[Accessed 10 March 2020]"
+}
+
+@Manual{springmanual,
+	title = {Spring Framework Reference Documentation},
+	author = {Johnson, Rod},    
+	note = {Available at \url{https://docs.spring.io/autorepo/docs/spring-framework/5.0.0.M1/spring-framework-reference/pdf/spring-framework-reference.pdf}, version 5.0.0.M1}
+}
+
+@misc{mcclanahan2004javaserver,
+	title={JavaServer™ Faces Specification},
+	author={McClanahan, Craig and Burns, Edward and Kitain, Roger},
+	year={2004},
+	publisher={Version}
+}
+
+@article{moreira2000java,
+	title={Java programming for high-performance numerical computing},
+	author={Moreira, Jose E and Midkiff, Samuel P and Gupta, Manish and Artigas, Pedro V and Snir, Marc and Lawrence, Richard D},
+	journal={IBM Systems Journal},
+	volume={39},
+	number={1},
+	pages={21--56},
+	year={2000},
+	publisher={IBM}
+}
+
+@book{odersky2008programming,
+	title={Programming in scala},
+	author={Odersky, Martin and Spoon, Lex and Venners, Bill},
+	year={2008},
+	publisher={Artima Inc}
+}
+
+@article{winston1986lisp,
+	title={Lisp},
+	author={Winston, Patrick Henry and Horn, Berthold K},
+	year={1986},
+	publisher={Addison Wesley Pub., Reading, MA}
+}
+
+@book{wali2014clojure,
+	title={Clojure for machine learning},
+	author={Wali, Akhil},
+	year={2014},
+	publisher={Packt Publishing Ltd}
+}
+
+@book{emerick2012clojure,
+	title={Clojure Programming: Practical Lisp for the Java World},
+	author={Emerick, Chas and Carper, Brian and Grand, Christophe},
+	year={2012},
+	publisher={" O'Reilly Media, Inc."}
+}
+
+@misc{paplauskaite2016,
+	title={Some sites you might know, built with Ruby on Rails: Bit Zesty},
+	url={https://bitzesty.com/2016/06/03/sites-might-know-built-ruby-rails/?category_id=64},
+	journal={Some sites you may know, built with ruby on rails},
+	publisher={Bit Zetsy},
+	author={Paplauskaite, Laura},
+	year={2016},
+	month={Sep}
+}
+
+@article{bachle2007ruby,
+	title={Ruby on rails},
+	author={B{\"a}chle, Michael and Kirchberg, Paul},
+	journal={IEEE software},
+	volume={24},
+	number={6},
+	pages={105--108},
+	year={2007},
+	publisher={IEEE}
+}
+
+@article{horzyk2009intelligent,
+	title={An Intelligent Internet Shop-Assistant Recognizing a Customer Personality for Improving Man-Machine Interactions},
+	author={Horzyk, Adrian and Magierski, Stanislav and Miklaszewski, Grzegorz},
+	journal={Recent Advances in intelligent information systems},
+	pages={13--26},
+	year={2009}
+}
+
+@inproceedings{hickey2008clojure,
+	title={The Clojure programming language},
+	author={Hickey, Rich},
+	booktitle={Proceedings of the 2008 symposium on Dynamic languages},
+	pages={1--1},
+	year={2008}
+}
+
+@book{wampler2014programming,
+	title={Programming Scala: Scalability= Functional Programming+ Objects},
+	author={Wampler, Dean and Payne, Alex},
+	year={2014},
+	publisher={" O'Reilly Media, Inc."}
+}
+
+@misc{dbpedialookup,
+	author = {Coelho, Sandro},
+	title = {DBpedia Lookup},
+	year = {2017},
+	publisher = {GitHub},
+	journal = {GitHub repository},
+	howpublished = {\url{https://github.com/dbpedia/lookup}}
+}
+
+@article{lopez2017alexa,
+	title="Alexa vs. Siri vs. Cortana vs. Google Assistant: A Comparison of Speech-Based Natural User Interfaces",
+	author="Gustavo {López} and Luis {Quesada} and Luis A. {Guerrero}",
+	journal="Advances in Human Factors and Systems Interaction. AHFE 2017. Advances in Intelligent Systems and Computing, vol 592. Springer, Cham",
+	pages="241--250",
+	year="2017"
+}
+
+@inbook{tulshan2019survey,
+	author = {Tulshan, Amrita and Dhage, Sudhir},
+	year = {2019},
+	month = {01},
+	pages = {190-201},
+	title = {Survey on Virtual Assistant: Google Assistant, Siri, Cortana, Alexa: 4th International Symposium SIRS 2018, Bangalore, India, September 19–22, 2018, Revised Selected Papers},
+	isbn = {978-981-13-5757-2},
+	doi = {10.1007/978-981-13-5758-9_17}
+}
+
+@misc{paplauskaite2016,
+	title={The future of the Google Assistant: Helping you get things done to give you time back},
+	url={https://www.blog.google/products/assistant/io18/},
+	journal={Google: The Keyword},
+	author={Huffman, Scott},
+	year={2018},
+	month={May}
+}
+
+@inproceedings{michaely2017keyword,
+	title={Keyword spotting for Google assistant using contextual speech recognition},
+	author={Michaely, Assaf Hurwitz and Zhang, Xuedong and Simko, Gabor and Parada, Carolina and Aleksic, Petar},
+	booktitle={2017 IEEE Automatic Speech Recognition and Understanding Workshop (ASRU)},
+	pages={272--278},
+	year={2017},
+	organization={IEEE}
+}
+
+@misc{googleassistant,
+	title={Google Assistant, your personal Google},
+	url={https://assistant.google.com/intl/en_uk/},
+	author={Google},
+	year={2020}
+}
+
+@inproceedings{ramngongausbeck2018,
+	address = {Republic and Canton of Geneva, Switzerland},
+	author = {Athreya, Ram G and Ngonga, Axel and Usbeck, Ricardo},
+	booktitle = {WWW '18 Companion: The 2018 Web Conference Companion, April 23--27, 2018, Lyon, France},
+	doi = {10.1145/3184558.3186964},
+	location = {Lyon, France},
+	numpages = {4},
+	publisher = {International World Wide Web Conferences Steering Committee},
+	title = {{Enhancing Community Interactions with Data-Driven Chatbots - The DBpedia Chatbot}},
+	url = {https://svn.aksw.org/papers/2018/WWW_dbpedia_chatbot/public.pdf},
+	year = 2018
+}
+
+@misc{dbpediachatbot,
+	title={DBPedia Chatbot},
+	url={http://chat.dbpedia.org/},
+	author={Athreya, Ram G and Ngonga, Axel and Usbeck, Ricardo},
+	year={2020},
+	addendum = "[Accessed 1 March 2020]"
+}
+
+@misc{aisb2019,
+	title={Mitsuku wins 2019 Loebner Prize and Best Overall Chatbot at AISB X - AISB - The Society for the Study of Artificial Intelligence and Simulation of Behaviour},
+	url={https://aisb.org.uk/mitsuku-wins-2019-loebner-prize-and-best-overall-chatbot-at-aisb-x/},
+	journal={Mitsuku wins 2019 Loebner Prize and Best Overall Chatbot at AISB X},
+	author={The Society for the study of Artificial Intelligence and Simulation of Behaviour},
+	year={2019},
+	month={Dec}
+}
+
+@misc{worswick2018mitsuku,
+	title={Mitsuku Chatbot},
+	url={http://www.square-bear.co.uk/mitsuku/home.htm},
+	author={Worswick, Steve},
+	year={2018},
+	addendum = "[Accessed 10 March 2020]"
+}
+
+@article{abdul2015survey,
+	title={Survey on chatbot design techniques in speech conversation systems},
+	author={Abdul-Kader, Sameera A and Woods, JC},
+	journal={International Journal of Advanced Computer Science and Applications},
+	volume={6},
+	number={7},
+	year={2015},
+	publisher={The Science and Information (SAI) Organization}
+}
+
+@inproceedings{higashinaka2014towards,
+	title={Towards an open-domain conversational system fully based on natural language processing},
+	author={Higashinaka, Ryuichiro and Imamura, Kenji and Meguro, Toyomi and Miyazaki, Chiaki and Kobayashi, Nozomi and Sugiyama, Hiroaki and Hirano, Toru and Makino, Toshiro and Matsuo, Yoshihiro},
+	booktitle={Proceedings of COLING 2014, the 25th International Conference on Computational Linguistics: Technical Papers},
+	pages={928--939},
+	year={2014}
+}
+
+@inproceedings{yan2016learning,
+	title={Learning to respond with deep neural networks for retrieval-based human-computer conversation system},
+	author={Yan, Rui and Song, Yiping and Wu, Hua},
+	booktitle={Proceedings of the 39th International ACM SIGIR conference on Research and Development in Information Retrieval},
+	pages={55--64},
+	year={2016}
+}
+
+@inproceedings{mikolov2011extensions,
+	title={Extensions of recurrent neural network language model},
+	author={Mikolov, Tom{\'a}{\v{s}} and Kombrink, Stefan and Burget, Luk{\'a}{\v{s}} and {\v{C}}ernock{\`y}, Jan and Khudanpur, Sanjeev},
+	booktitle={2011 IEEE international conference on acoustics, speech and signal processing (ICASSP)},
+	pages={5528--5531},
+	year={2011},
+	organization={IEEE}
+}
+
+@inproceedings{bradevsko2012survey,
+	title={A survey of chatbot systems through a loebner prize competition},
+	author={Brade{\v{s}}ko, Luka and Mladeni{\'c}, Dunja},
+	booktitle={Proceedings of Slovenian Language Technologies Society Eighth Conference of Language Technologies},
+	pages={34--37},
+	year={2012}
 }
