--- a/writeup/latex/frontmatter/abbreviations.tex
+++ b/writeup/latex/frontmatter/abbreviations.tex
@@ -1,6 +1,22 @@
 \begin{dictionary}{Abbreviations}
+\item[AI]			Artificial intelligence
+\item[AIML]			Artificial Intelligence Markup Language
 \item[A.L.I.C.E]	Artificial Linguistic Internet Computer Entity
+\item[AST]			Abstract Syntax Tree
+\item[CAD]			Computer-Aided Diagnosis
+\item[GO]			Goal-Oriented
 \item[HCI]			Human-Computer Interaction
 \item[IoT]			Internet of Things
+\item[IVA]			Intelligent Virtual Assistant
+\item[LM]			Language Model
+\item[LSTM]			Long Short-Term Memory
+\item[ML]			Machine Learning
+\item[NLP]			Natural Language Processing
+\item[RDF]			Resource Description Framework
+\item[RG]			Response Generation
+\item[RNN]			Recurrent Neural Network
+\item[SPARQL]		SPARQL Protocol and RDF Query Language
+\item[UDC]			Ubuntu Dialogue Corpus
+\item[XML]			Extensible Markup Language
 
 \end{dictionary}
