--- a/writeup/latex/dissertation.tex
+++ b/writeup/latex/dissertation.tex
@@ -3,7 +3,7 @@
 \usepackage[british]{babel}
 \usepackage{url}
 \usepackage{color}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage[toc]{appendix}
 \usepackage{titlesec}
 \usepackage[square,numbers]{natbib}
