Introduction page updates

--- a/writeup/latex/references.bib
+++ b/writeup/latex/references.bib
@@ -1,18 +1,35 @@
 %TODO: Manage online resources with accessed date
 %TODO: Deal with errors thrown by Bibtex, missing tags
+
+@misc{bcs2019conduct,
+	author = {{British Computer Society (BCS)}},
+	title = {Code of Conduct for BCS Members},
+	year = {2019},
+	url = "https://cdn.bcs.org/bcs-org-media/2211/bcs-code-of-conduct.pdf",
+	note = "Accessed 19 Mar 2020"
+}
+
+@misc{surreyethics,
+	author = {{University of Surrey}},
+	title = {Ethics - Research},
+	year = {2020},
+	url = "https://research.surrey.ac.uk/ethics",
+	note = "Accessed 19 Mar 2020"
+}
+
 @misc{chandra2018,
 	author = {Chandra, Rishi},
 	title = {How Google Home and the Google Assistant helped you get more done in 2017},
 	year = "2018",
 	url = "https://blog.google/products/assistant/how-google-home-and-google-assistant-helped-you-get-more-done-in-2017/",
-	note = "[Online; accessed 6 Mar 2020]"
+	note = "Accessed 6 Mar 2020"
 }
 @misc{gvr2017,
 	author = {{Grand View Research}},
 	title = {Chatbot Market Size And Share Analysis, Industry Report, 2014 - 2025},
 	year = "2017",
 	url = "https://www.grandviewresearch.com/industry-analysis/chatbot-market",
-	note = "[Online; accessed 6 Mar 2020]"
+	note = "Accessed 6 Mar 2020"
 }
 @article{turing1950computing,
 	title={Computing Machinery and Intelligence},
@@ -44,7 +61,7 @@
 	title = {The Loebner Prize, a Turing Test competition at Bletchley Park | The University of Exeter},
 	year = "2017",
 	url = "https://blogs.exeter.ac.uk/exeterblog/blog/2014/12/08/the-loebner-prize-a-turing-test-competition-at-bletchley-park/",
-	note = "[Online; accessed 6 Mar 2020]"
+	note = "Accessed 6 Mar 2020"
 }
 @misc{shieber1994lessons,
 	title={Lessons from a Restricted Turing Test},
@@ -69,7 +86,7 @@
 	author={IBM},
 	year={2018},
 	url = "https://www.ibm.com/cloud/watson-assistant",
-	note = "[Online; accessed 6 Mar 2020]"
+	note = "Accessed 6 Mar 2020"
 }
 
 @misc{ibm2017autodesk,
@@ -77,7 +94,7 @@
 	author={Shieber, Christine},
 	year={2017},
 	url = "https://www.ibm.com/blogs/watson/2017/10/how-autodesk-sped-up-customer-service-times-with-watson/",
-	note = "[Online; accessed 6 Mar 2020]"
+	note = "Accessed 6 Mar 2020"
 }
 
 @misc{microsoft2019azure,
@@ -85,7 +102,7 @@
 	author={{Microsoft Azure}},
 	year={2019},
 	url = "https://azure.microsoft.com/en-gb/services/bot-service/",
-	note = "[Online; accessed 6 Mar 2020]"
+	note = "Accessed 6 Mar 2020"
 }
 
 @article{cahn2017chatbot,
@@ -108,7 +125,7 @@
 	author={{Pandorabots Inc.}},
 	year={2019},
 	url = "https://pandorabots.com/docs/",
-	note = "[Online; accessed 6 Mar 2020]"
+	note = "Accessed 6 Mar 2020"
 }
 @misc{vinyals2015neural,
 	title={A Neural Conversational Model},
@@ -196,7 +213,7 @@
 	title = {List of Wikipedias},
 	year = "2019",
 	url = "https://meta.wikimedia.org/wiki/List_of_Wikipedias",
-	note = "[Accessed 6 Mar 2020]"
+	note = "Accessed 6 Mar 2020"
 }
 
 @misc{dbpedia2019about,
@@ -204,7 +221,7 @@
 	title = {{About | DBpedia}},
 	year = "2019",
 	url = "https://wiki.dbpedia.org/about",
-	note = "[Accessed 6 Mar 2020]"
+	note = "Accessed 6 Mar 2020"
 }
 
 @article{lehmann2015dbpedia,
@@ -223,7 +240,7 @@
 	title = {{Ontology | DBpedia}},
 	year = "2019",
 	url = "https://wiki.dbpedia.org/services-resources/ontology",
-	note = "[Online; accessed 6 Mar 2020]"
+	note = "Accessed 6 Mar 2020"
 }
 
 @article{bizer2009dbpedia,
@@ -324,7 +341,7 @@
 	place={Berkeley, CA},
 	title={Industrial machine learning: using artificial intelligence as a transformational disruptor},
 	publisher={Apress},
-	author={{Vermeulen, Andreas Fran\c{c}ois}},
+	author={Vermeulen, Andreas Fran\c{c}ois},
 	year={2019}
 }
 
@@ -449,7 +466,7 @@
 	author = "Kaggle",
 	title = "Kaggle: Your Home for Data Science",
 	url = "https://www.kaggle.com/",
-	addendum = "[Accessed 10 March 2020]"
+	addendum = "Accessed 10 March 2020"
 }
 
 @article{kuan2017deep,
@@ -471,15 +488,15 @@
 	title = "rDany Chat",
 	year = {2016},
 	url = "https://www.kaggle.com/eibriel/rdany-conversations",
-	addendum = "[Accessed 10 March 2020]"
+	addendum = "Accessed 10 March 2020"
 }
 
 @online{sparql,
-	author = "The W3C SPARQL Working Group",
+	author = {{The W3C SPARQL Working Group}},
 	title = "SPARQL 1.1 Overview",
 	year = {2013},
 	url = "https://www.w3.org/TR/sparql11-query/",
-	addendum = "[Accessed 10 March 2020]"
+	addendum = "Accessed 10 March 2020"
 }
 
 @article{decker2000semantic,
@@ -505,35 +522,35 @@
 }
 
 @online{mediawiki,
-	author = "Wikimedia Foundation",
+	author = {{Wikimedia Foundation}},
 	title = "API:Main page",
 	year = {2020},
 	url = "https://www.mediawiki.org/wiki/API:Main_page",
-	addendum = "[Accessed 10 March 2020]"
+	addendum = "Accessed 10 March 2020"
 }
 
 @online{apachejena,
-	author = "The Apache Software Foundation",
+	author = {{The Apache Software Foundation}},
 	title = "Apache Jena",
 	year = {2020},
 	url = "https://jena.apache.org/",
-	addendum = "[Accessed 10 March 2020]"
+	addendum = "Accessed 10 March 2020"
 }
 
 @online{apachemaven,
-	author = "The Apache Software Foundation",
+	author = {{The Apache Software Foundation}},
 	title = "Apache Maven",
 	year = {2020},
 	url = "https://maven.apache.org/",
-	addendum = "[Accessed 10 March 2020]"
+	addendum = "Accessed 10 March 2020"
 }
 
 @online{gradle,
-	author = "Gradle Inc.",
+	author = {{Gradle Inc.}},
 	title = "Gradle Build Tool",
 	year = {2020},
 	url = "https://gradle.org/",
-	addendum = "[Accessed 10 March 2020]"
+	addendum = "Accessed 10 March 2020"
 }
 
 @Manual{springmanual,
@@ -681,7 +698,8 @@
 	title={Google Assistant, your personal Google},
 	url={https://assistant.google.com/intl/en_uk/},
 	author={Google},
-	year={2020}
+	year={2020},
+	note = "Accessed 10 Mar 2020"
 }
 
 @inproceedings{ramngongausbeck2018,
@@ -702,7 +720,7 @@
 	url={http://chat.dbpedia.org/},
 	author={Athreya, Ram G and Ngonga, Axel and Usbeck, Ricardo},
 	year={2020},
-	addendum = "[Accessed 1 March 2020]"
+	addendum = "Accessed 1 March 2020"
 }
 
 @misc{aisb2019,
@@ -719,7 +737,7 @@
 	url={http://www.square-bear.co.uk/mitsuku/home.htm},
 	author={Worswick, Steve},
 	year={2018},
-	addendum = "[Accessed 10 March 2020]"
+	addendum = "Accessed 10 March 2020"
 }
 
 @article{abdul2015survey,
