--- a/writeup/latex/backmatter/appenda.tex
+++ b/writeup/latex/backmatter/appenda.tex
@@ -1,5 +1,5 @@
-\chapter{Wikimedia API}
-\label{ch:wikimedia}
+\chapter{MediaWiki API}
+\label{app:mediawiki}
 The following Figure~\ref{fig:wiki} shows a fragment of the response when running a query using the MediaWiki API \cite{mediawiki}. The result has been truncated, and is the response from the query
 
 \begin{lstlisting}
