--- a/writeup/latex/references.bib
+++ b/writeup/latex/references.bib
@@ -1,6 +1,14 @@
 %TODO: Manage online resources with accessed date
 %TODO: Deal with errors thrown by Bibtex, missing tags
 
+@online{wdc2019crawl,
+	author = {{Web Data Commons}},
+	title = {Web Data Commons - RDFa, Microdata, Embedded JSON-LD, and Microformats Data Sets - November 2019},
+	year = {2019},
+	url = {http://webdatacommons.org/structureddata/2019-12/stats/stats.html},
+	note = "Accessed 19 Mar 2020"
+}
+
 @misc{bcs2019conduct,
 	author = {{British Computer Society (BCS)}},
 	title = {Code of Conduct for BCS Members},
