More content in introduction

--- a/writeup/latex/frontmatter/abstract.tex
+++ b/writeup/latex/frontmatter/abstract.tex
@@ -1,4 +1,4 @@
 \chapter*{Abstract}
-In 1950, Alan Turing proposed the {\it Imitation Game} to assess how easily a computer can replicate human interactions. Seventy years later, chatbots, or dialogue systems, are ubiquitous in modern life. From customer service bots to virtual assistants such as Google Assistant, chatbots have revolutionised how we interact with computer systems. The landscape of human-computer interaction is shifting towards using natural language to automate our daily lives.
+In 1950, Alan Turing proposed the {\it Imitation Game} to assess how easily a computer can replicate human interactions. Seventy years later, chatbots, or dialogue systems, are ubiquitous in modern life. From customer service bots to virtual assistants such as Google Assistant, chatbots have revolutionised how we interact with computer systems. Human-computer interaction is shifting towards using natural language to automate our daily lives.
 
 This project explores how a chatbot can be implemented to learn and extract information from a data source. Specifically, the system allows users to ask a bot questions about Wikipedia articles, extracting data from a project called DBPedia which provides structured, processable information. The goal of the project is to evaluate how a structured dataset can be queried and rendered in the age of the Semantic Web.
