--- a/writeup/latex/references.bib
+++ b/writeup/latex/references.bib
@@ -790,3 +790,24 @@
 	pages={34--37},
 	year={2012}
 }
+
+@misc{django2020,
+	title={Django},
+	url={https://www.djangoproject.com/},
+	author={{Django Software Foundation}},
+	year={2020},
+	addendum = "Accessed 1 April 2020"
+}
+@article{plekhanova2009evaluating,
+	title={Evaluating web development frameworks: Django, Ruby on Rails and CakePHP},
+	author={Plekhanova, Julia},
+	journal={Institute for Business and Information Technology},
+	year={2009}
+}
+
+@article{shawar2011corpus,
+	title={A Corpus Based Approach to Generalising a Chatbot System: Applying Simple Natural Language Processing Techniques to Build Knowledge Base of ALICE Chatbot System},
+	author={Shawar, Bayan Abu},
+	year={2011},
+	publisher={LAP Lambert Academic Publishing}
+}
