--- a/writeup/latex/references.bib
+++ b/writeup/latex/references.bib
@@ -592,7 +592,7 @@
 	publisher={Artima Inc}
 }
 
-@article{winston1986lisp,
+@book{winston1986lisp,
 	title={Lisp},
 	author={Winston, Patrick Henry and Horn, Berthold K},
 	year={1986},
@@ -684,7 +684,7 @@
 	doi = {10.1007/978-981-13-5758-9_17}
 }
 
-@misc{paplauskaite2016,
+@misc{huffman2018,
 	title={The future of the Google Assistant: Helping you get things done to give you time back},
 	url={https://www.blog.google/products/assistant/io18/},
 	journal={Google: The Keyword},
@@ -708,19 +708,6 @@
 	author={Google},
 	year={2020},
 	note = "Accessed 10 Mar 2020"
-}
-
-@inproceedings{ramngongausbeck2018,
-	address = {Republic and Canton of Geneva, Switzerland},
-	author = {Athreya, Ram G and Ngonga, Axel and Usbeck, Ricardo},
-	booktitle = {WWW '18 Companion: The 2018 Web Conference Companion, April 23--27, 2018, Lyon, France},
-	doi = {10.1145/3184558.3186964},
-	location = {Lyon, France},
-	numpages = {4},
-	publisher = {International World Wide Web Conferences Steering Committee},
-	title = {{Enhancing Community Interactions with Data-Driven Chatbots - The DBpedia Chatbot}},
-	url = {https://svn.aksw.org/papers/2018/WWW_dbpedia_chatbot/public.pdf},
-	year = 2018
 }
 
 @misc{dbpediachatbot,
