Progress on implementation writeup

--- a/writeup/latex/references.bib
+++ b/writeup/latex/references.bib
@@ -798,3 +798,18 @@
 	year={2011},
 	publisher={LAP Lambert Academic Publishing}
 }
+
+ @misc{programab_2013,
+ 	title={Google Code Archive - Long-term storage for Google Code Project Hosting.},
+ 	url={https://code.google.com/archive/p/program-ab/},
+ 	journal={Google}, publisher={Google},
+ 	author={{ALICE A.I. Foundation}}, year={2013}, month={Jan}}
+ 
+ @misc{lumenrobot2016,
+ 	author = {Irawan, Hendy},
+ 	title = {program-ab},
+ 	year = {2016},
+ 	publisher = {GitHub},
+ 	journal = {GitHub repository},
+ 	url = {https://github.com/lumenrobot/program-ab}
+ }
