More implementation writeup

--- a/writeup/latex/dissertation.tex
+++ b/writeup/latex/dissertation.tex
@@ -17,6 +17,7 @@
 \usepackage{subfig}
 \usepackage{listings}
 \usepackage{courier}
+\usepackage{outlines}
 
 %hyphenation rules
 \hyphenation{internet}
