More implementation writeup

--- a/writeup/latex/dissertation.tex
+++ b/writeup/latex/dissertation.tex
@@ -39,6 +39,7 @@
 
 \newcommand{\hilight}[1]{\colorbox{yellow}{#1}}
 \def\UrlBreaks{\do\/\do-}
+\def\code#1{\texttt{#1}}
 \begin{document} 
 
 	%title
