first draft of implementation
Need to add model and planning parts

--- a/writeup/latex/dissertation.tex
+++ b/writeup/latex/dissertation.tex
@@ -20,6 +20,8 @@
 \usepackage{outlines}
 \usepackage{pdflscape}
 \usepackage{ltablex}
+\usepackage[export]{adjustbox}
+
 %hyphenation rules
 \hyphenation{internet}
 \hyphenation{interaction}
