--- a/writeup/latex/references.bib
+++ b/writeup/latex/references.bib
@@ -813,3 +813,19 @@
  	journal = {GitHub repository},
  	url = {https://github.com/lumenrobot/program-ab}
  }
+
+@INPROCEEDINGS{rank2014,
+	author={M. {Atzori} and A. {Dessi}},
+	booktitle={2014 IEEE 23rd International WETICE Conference}, 
+	title={Ranking DBpedia Properties}, 
+	year={2014},
+	volume={},
+	number={},
+	pages={441-446},}
+
+@inproceedings{rank2012,
+	title={Towards a formal model for sharing and reusing ranking computations},
+	author={Roa-Valverde, Antonio and Thalhammer, Andreas and Toma, Ioan and Sicilia, Miguel-Angel},
+	booktitle={Proceedings of the 6th Intl. Workshop on Ranking in Databases In conjunction with VLDB},
+	year={2012}
+}
