--- a/writeup/latex/references.bib
+++ b/writeup/latex/references.bib
@@ -829,3 +829,14 @@
 	booktitle={Proceedings of the 6th Intl. Workshop on Ranking in Databases In conjunction with VLDB},
 	year={2012}
 }
+
+@article{sdlc2010,
+	title={Software development lifecycle models},
+	author={Ruparelia, Nayan B},
+	journal={ACM SIGSOFT Software Engineering Notes},
+	volume={35},
+	number={3},
+	pages={8--13},
+	year={2010},
+	publisher={ACM New York, NY, USA}
+}
