requirements testing screenshots

--- a/writeup/latex/references.bib
+++ b/writeup/latex/references.bib
@@ -840,3 +840,5 @@
 	year={2010},
 	publisher={ACM New York, NY, USA}
 }
+
+@article{fowler1996, title={What constitutes the sovereign state?}, volume={22}, DOI={10.1017/S0260210500118637}, number={4}, journal={Review of International Studies}, publisher={Cambridge University Press}, author={Fowler, Michael Ross and Bunck, Julie Marie}, year={1996}, pages={381–404}}
