uat tests and writeup

--- a/writeup/latex/dissertation.tex
+++ b/writeup/latex/dissertation.tex
@@ -12,6 +12,7 @@
 \usepackage{booktabs}
 \usepackage{enumitem}
 \usepackage{tabularx}
+\usepackage[table,xcdraw]{xcolor}
 \usepackage[justification=centering]{caption}
 \usepackage{pdfpages}
 \usepackage{subfig}
@@ -52,7 +53,7 @@
 \begin{document} 
 
 	%title
-	\title{Developing a Chatbot to Answer\\ Wikipedia Queries}
+	\title{How Linked Data Can Be Used to \\ Develop a Chatbot to Answer Wikipedia Queries}
 	% front matter
 	\author{Alex Turner}
 	\urn{6436302}
@@ -68,8 +69,11 @@
 	\include{frontmatter/abbreviations}
 
 	\tableofcontents
+
+	
 	\listoffigures
 	\listoftables
+	
 	%\include{frontmatter/glossary}
 	%\include{frontmatter/abbreviations}
 	
@@ -93,6 +97,7 @@
 	\input{backmatter/appenda}
 	\input{backmatter/appendb}
 	\input{backmatter/appendc}
+	\input{backmatter/appendd}
 	
 	
 	\bibliography{references}
