--- a/writeup/latex/backmatter/appendc.tex
+++ b/writeup/latex/backmatter/appendc.tex
@@ -1,3 +1,4 @@
 \chapter{SAGE Form}
+\label{app:sage}
 The following document shows the output of the SAGE self-check application form for this project.
 \includepdf[pages=-]{backmatter/SAGE.pdf}
